# arm-trusted-firmware

./: .checkpatch.conf  .clang-format  .commitlintrc.js  .ctags  .cz-adapter.cjs  .cz.json  .editorconfig  .gitignore  .gitmodules  .gitreview  .readthedocs.yaml  .versionrc.cjs  .versionrc.js  Makefile  acknowledgements.md  acknowledgements.rst  build.sh  changelog.yaml  commitlint.config.js  contributing.md  contributing.rst  license.md  license.rst  maintainers.md  maintainers.rst  package-lock.json  package.json  pyproject.toml  readme.md  readme.rst
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: build-ti-k3.yml  makefile.yml
.husky/: commit-msg  commit-msg.gerrit  pre-commit  pre-commit.copyright  prepare-commit-msg  prepare-commit-msg.cz
bl1/: bl1.ld.S  bl1.mk  bl1_context_mgmt.c  bl1_fwu.c  bl1_main.c  bl1_private.h
bl1/aarch32/: bl1_arch_setup.c  bl1_context_mgmt.c  bl1_entrypoint.S  bl1_exceptions.S
bl1/aarch64/: bl1_arch_setup.c  bl1_context_mgmt.c  bl1_entrypoint.S  bl1_exceptions.S  early_exceptions.S
bl1/tbbr/: tbbr_img_desc.c
bl2/: bl2.ld.S  bl2.mk  bl2_el3.ld.S  bl2_image_load.c  bl2_image_load_v2.c  bl2_main.c  bl2_private.h
bl2/aarch32/: bl2_arch_setup.c  bl2_el3_entrypoint.S  bl2_el3_exceptions.S  bl2_entrypoint.S  bl2_run_next_image.S
bl2/aarch64/: bl2_arch_setup.c  bl2_el3_entrypoint.S  bl2_el3_exceptions.S  bl2_entrypoint.S  bl2_rme_entrypoint.S  bl2_run_next_image.S
bl2u/: bl2u.ld.S  bl2u.mk  bl2u_main.c
bl2u/aarch32/: bl2u_entrypoint.S
bl2u/aarch64/: bl2u_entrypoint.S
bl31/: bl31.ld.S  bl31.mk  bl31_context_mgmt.c  bl31_main.c  bl31_traps.c  context_mgmt.c  cpu_data_array.c  ehf.c  interrupt_mgmt.c  runtime_svc.c
bl31/aarch64/: bl31_arch_setup.c  bl31_entrypoint.S  context.S  cpu_data.S  crash_reporting.S  ea_delegate.S  exception_handlers.c  runtime_exceptions.S
bl32/optee/: optee.mk
bl32/sp_min/: sp_min.ld.S  sp_min.mk  (+6 more)
common/: auth.c  backtrace.c  bl_common.c  context_mgmt.c  debug.c  desc_image_load.c  fdt_fixup.c  fdt_wrappers.c  fdt_wrappers.mk  feat_detect.c  hw_crc32.c  image_decompress.c  measured_boot_helpers.c  runtime_svc.c  smc_validation.c  tf_crc32.c  tf_log.c  tf_printf.c  tf_snprintf.c  uuid.c
docs/: Makefile  acknowledgements.rst  architecture_features.rst  arm-sip-service.md  arm-sip-service.rst  auth-framework.md  auth-framework.rst  change-log-upcoming.rst  change-log.md  change-log.rst  coding-guidelines.rst  conf.py  contents.rst  cpu-errata-workarounds.md  cpu-specific-build-macros.md  cpu-specific-build-macros.rst  exception-handling.rst  firmware-design.md  firmware-design.rst  firmware-update.md  firmware-update.rst  frequently-asked-questions.rst  global_substitutions.txt  glossary.rst  image-terminology.rst  index.rst  interrupt-framework-design.md  interrupt-framework-design.rst  license.rst  maintainers.rst  optee-dispatcher.md  plaform-compatibility-policy.rst  platform-compatibility-policy.rst  platform-interrupt-controller-API.rst  platform-migration-guide.md  platform-migration-guide.rst  porting-guide.md  porting-guide.rst  psci-lib-integration-guide.md  psci-lib-integration-guide.rst  (+24 more)
fdts/: AM62Lx-SKEVM-LP4-50-800.dtsi  a5ds.dts  am62lx-skevm-lp4-50-800.dtsi  arm_fpga.dts  cca_cot_descriptors.dts  cca_cot_descriptors.dtsi  corstone700.dts  corstone700.dtsi  corstone700_fpga.dts  corstone700_fvp.dts  cot_descriptors.dtsi  dualroot_cot_descriptors.dtsi  fvp-base-gicv2-psci-aarch32.dtb  fvp-base-gicv2-psci-aarch32.dts  fvp-base-gicv2-psci.dtb  fvp-base-gicv2-psci.dts  fvp-base-gicv2.dtsi  fvp-base-gicv23-interrupts.dtsi  fvp-base-gicv2legacy-psci.dtb  fvp-base-gicv2legacy-psci.dts  fvp-base-gicv3-psci-1t.dtb  fvp-base-gicv3-psci-1t.dts  fvp-base-gicv3-psci-aarch32-1t.dts  fvp-base-gicv3-psci-aarch32-common.dtsi  fvp-base-gicv3-psci-aarch32.dtb  fvp-base-gicv3-psci-aarch32.dts  fvp-base-gicv3-psci-common.dtsi  fvp-base-gicv3-psci-dynamiq-2t.dts  fvp-base-gicv3-psci-dynamiq-common.dtsi  fvp-base-gicv3-psci-dynamiq.dtb  fvp-base-gicv3-psci-dynamiq.dts  fvp-base-gicv3-psci.dtb  fvp-base-gicv3-psci.dts  fvp-base-gicv3.dtsi  fvp-base-gicv5-psci.dts  fvp-base-gicv5.dtsi  fvp-base-psci-common.dtsi  fvp-defs-dynamiq.dtsi  fvp-defs.dtsi  fvp-foundation-gicv2-psci.dtb  (+138 more)
include/: asm_macros.S  bakery_lock.h  bl1.h  bl2.h  bl31.h  bl_common.h  cm_macros.S  context.h  context_mgmt.h  debug.h  io_storage.h  mmio.h  pm.h  psci.h  runtime_svc.h  semihosting.h  spinlock.h  stdio.h  tsp.h
lib/: io_storage.c  mmio.c
make_helpers/: arch_features.mk  armv7-a-cpus.mk  build-rules.mk  build_env.mk  build_macros.mk  cflags.mk  common.mk  constraints.mk  cygwin.mk  defaults.mk  march.mk  msys.mk  plat_helpers.mk  toolchain.mk  unix.mk  utilities.mk  windows.mk
tools/: scmi_id_gen_clk.py  scmi_id_gen_pd.py
tools/cot_dt2c/: Makefile  pyproject.toml  requirements.txt
tools/cot_dt2c/cot_dt2c/: __init__.py  __main__.py  cli.py  cot_dt2c.py  cot_parser.py  dt_validator.py
tools/cot_dt2c/cot_dt2c/pydevicetree/: __init__.py
tools/cot_dt2c/cot_dt2c/pydevicetree/ast/: __init__.py  directive.py  helpers.py  node.py  property.py  reference.py
tools/cot_dt2c/cot_dt2c/pydevicetree/source/: __init__.py  grammar.py  parser.py
tools/cot_dt2c/tests/: test.dtsi  test2.dtsi  test_invalid_bracket.dtsi  test_invalid_ifdef.dtsi  test_invalid_ifdef2.dtsi  test_invalid_missing_attribute.dtsi  test_invalid_missing_attribute2.dtsi  test_invalid_missing_ctr.dtsi  test_invalid_missing_root.dtsi  test_invalid_undefined_parent.dtsi  test_util.py
tools/memory/: print_memory_map.py  pyproject.toml
tools/memory/memory/: __init__.py  buildparser.py  elfparser.py  mapparser.py  memmap.py  printer.py
tools/memory/src/memory/: __init__.py  buildparser.py  elfparser.py  image.py  mapparser.py  memmap.py  printer.py  summary.py
tools/memory/src/memory/templates/: summary-flamegraph.html
tools/tlc/: Makefile  pyproject.toml  tox.ini
tools/tlc/tests/: conftest.py  test_cli.py  test_transfer_list.py
tools/tlc/tlc/: __init__.py  __main__.py  cli.py  te.py  tl.py
tools/tlc/tlc/templates/: header.h.j2
(+7393 files in other folders)
