[tool.poetry]
name = "trusted-firmware-a"
version = "2.14.0"
description = "Trusted Firmware-A (TF-A) Python dependencies."
authors = ["Arm Ltd."]
license = "BSD-3-Clause"
readme = "readme.rst"

[tool.poetry.dependencies]
python = "^3.8"
cot-dt2c = {path = "tools/cot_dt2c", develop = true}
memory = {path = "tools/memory", develop = true}
tlc = {path = "contrib/libtl/tlc", develop = true}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
myst-parser = "^0.18.1"
sphinxcontrib-plantuml = "^0.24.1"
sphinx-rtd-theme = "^1.1.1"
pip-tools = "^6.4.0"
sphinxcontrib-svg2pdfconverter = "^1.2.2"

[tool.poetry.group.ci.dependencies]
click = "^8.1.3"
fdt = "^0.3.0"
