[tool.poetry]
name = "memory"
version = "0.1.0"
description = "A tool for analysis of static memory consumption by TF-A images"
authors = ["Chris Kay <chris.kay@arm.com>", "Harrison Mutai <harrison.mutai@arm.com>"]
license = "BSD-3-Clause"
packages = [{include = "memory", from = "src"}]

[tool.poetry.dependencies]
anytree = "^2.8.0"
click = "^8.1.3"
prettytable = "^3.5.0"
pyelftools = "^0.29.0"
python = "^3.8.0"
jinja2 = "^3.1.6"

[tool.poetry.scripts]
memory = "memory.memmap:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pyright = "^1.1.399"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
